--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Meeting</h1>
-
+<h1 class="leading-tight mb-2 ml-5">New Meeting</h1>
+<br>
 <%= render 'form', meeting: @meeting %>
-
-<%= link_to 'Back', meetings_path %>
+<br>
+<%= link_to 'Back', meetings_path , {:class => "py-2 px-5 text-white bg-indigo-light mt-4" }%>
