--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -1,24 +1,36 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @meeting.name %>
-</p>
+<div class="max-w-lg my-12 m-auto shadow-lg">
+  <div class="p-10 bg-white border border-grey-light rounded">
 
-<p>
-  <strong>Start time:</strong>
-  <%= @meeting.start_time %>
-</p>
+    <div class="flex flex-wrap justify-between items-center mb-5">
+      <h1 class="sm:mb-6"><%= @meeting.name %></h1><br>
+      <%= link_to "Edit Schedule",  edit_meeting_path, {:class => "btn bg-indigo border-b-4 border-bg-indigo light hover:bg-indigo-dark text-white"} %> <br>
+      <%= link_to "Cancel Meeting", meeting_path, method: :delete, data: { confirm: "Are you sure you want to cancel? "}, class: "btn btn-destroy" if admin?%>
+    </div>
 
-<p>
-  <strong>End time:</strong>
-  <%= @meeting.end_time %>
-</p>
+    <div class="border p-6 rounded bg-grey-lighter mb-5 flex items-center justify-between">
+      <p class="border-2 py-3 px-4 border-indigo rounded-full text-sm text-indigo">
+        Start time: <span class="font-bold"><%= readable_time(@meeting.start_time) %></span>
+      </p>
+      <div class="border-t-2 border-indigo-light border-dashed h-1 flex flex-1"></div>
+      <p class="border-2 py-3 px-4 border-indigo rounded-full text-sm text-indigo">
+        End time: <span class="font-bold"><%= readable_time(@meeting.end_time) %></span>
+      </p>
+    </div>
 
-<p>
-  <strong>User:</strong>
-  <%= @meeting.user %>
-</p>
+    <h4>Comments</h4>
+    <hr class="border" />
 
-<%= link_to 'Edit', edit_meeting_path(@meeting) %> |
-<%= link_to 'Back', meetings_path %>
+    <% unless user_signed_in? %>
+      <div class="bg-grey-lighter rounded p-4 mt-4 text-center">
+        <p class="text-sm text-grey-dark"><%= link_to "Login", new_user_session_path, class: "link" %> or <%= link_to "Sign up", new_user_regsitration_path, class: "link" %> to comment.</p>
+      </div>
+    <% else %>
+      <%#= render 'comments/form' %>
+    <% end %>
+
+    <div id="comments">
+      <%#= render @meeting.comments %>
+    </div>
+  </div>
+</div>
