--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,17 +1,12 @@
-<p class="text-grey-dark my-2 text-sm">
-Comment as: <%= current_user.username %>
-</p>
 
-<%= form_for([@meeting, @comments], remote: true) do |f| %>
- 
-    <div class="relative">
-        <%= f.text_field :reply, class: "input h-32 border-indigo resize-none border", placeholder: "drop any notes or replies here?" %>
+<p class="text-sm text-grey my-2">comment as <%= current_user.username %></p>
 
-        <trix-editor class="h-32 p-4" input="comment-reply" id="comment_reply_trix"></trix-editor>
+<%= form_for([@meeting, @comment], remote: true) do |f| %>
+  <div class="relative">
+    <%= f.hidden_field :reply, class: "input h-32 border border-grey-light resize-none", placeholder: "Add any notes or replies here" %>
 
-        <%= f.submit "Submit", disable_with: 'Submiting...' ,
-        class: "btn btn-small btn-indigo block w-full text-center mt-3 lg:inline-flex"
-        %>
-    </div>
+    <trix-editor input="comment_reply" id="comment_reply_trix" class="h-32 p-4"></trix-editor>
 
+    <%= f.submit class: "btn btn-small text-white py-3 bg-indigo block w-full text-center mt-2 lg: mt-0 lg:text-left lg:absolute lg:pin-b lg:pin-r lg:mb-2 lg:mr-2 lg:w-auto lg:inline-flex" %>
+  </div>
 <% end %>
