--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,17 +1,13 @@
-<div class="flex items-start p-6 mt-4 border rounded border-indigo-dark bg-grey-lighter">
-    <div class="flex flex-1 pl-4 items-start justify-between">
-        <div class="leading-tight">
-            <p class="text-grey-dark text-xs">
-                <%= comment.user.username %> commented <%= time_ago_in_words(comment.created_at) %> ago
-            </p>
-            
-            <div class="text-grey-darkest">
-                <%= sanitize comment.reply %>
-            </div>
 
-            <% if author_of(comment) %>
-              <%= link_to "delete", meeting_comment_path(comment.meeting.path), method: :delete , class: "btn btn-destroy", data: { confirm: 'Are you sure?' } %>
-            <% end %>
-        <div>
-    <div>
+<div class="flex items-start p-4 mt-4 border shadow rounded">
+  <div class="flex-1 pl-4 flex items-start justify-between">
+    <div class="leading-normal">
+      <p class="text-grey-dark text-xs"><%= comment.user.username %> commented <%= time_ago_in_words(comment.created_at) %> ago</p>
+      <div class="text-grey-darkest"><%= sanitize comment.reply %></div>
+    </div>
+
+    <% if author_of(comment) %>
+      <%= link_to "Delete", meeting_comment_path(comment.meeting, comment), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-block text-white block bg-red" %>
+    <% end %>
+  </div>
 </div>
