--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,4 @@
-
-<p class="text-sm text-grey my-2">comment as <%= current_user.username %></p>
+<p class="text-sm text-grey-dark my-2">comment as <%= current_user.username %></p>
 
 <%= form_for([@meeting, @comment], remote: true) do |f| %>
   <div class="relative">
@@ -7,6 +6,6 @@
 
     <trix-editor input="comment_reply" id="comment_reply_trix" class="h-32 p-4"></trix-editor>
 
-    <%= f.submit class: "btn btn-small text-white py-3 bg-indigo block w-full text-center mt-2 lg: mt-0 lg:text-left lg:absolute lg:pin-b lg:pin-r lg:mb-2 lg:mr-2 lg:w-auto lg:inline-flex" %>
+    <%= f.submit class: "btn bg-indigo btn-xl text-white block w-full text-center mt-2 lg: mt-0 lg:text-left lg:absolute lg:pin-b lg:pin-r lg:mb-2 lg:mr-2 lg:w-auto lg:inline-flex" %>
   </div>
 <% end %>
