#410 Fun Stripe Card Added, And more Sidekiq added

--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -35,7 +35,7 @@
 
     <hr class="border" />
 
-    <%#= render "payment_form" %>
+    <%= render "payment_form" %>
 
 
     <%= form.submit class: "btn bg-indigo border border-b-4 hover:bg-indigo-dark hover:border-indigo-lighter text-white text-base mt-5 py-3 px-5" %>
