--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
     <%= stylesheet_pack_tag  'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag  'application', 'data-turbolinks-track': 'reload' %>
-
+    <%= favicon_link_tag 'consult.png', type: 'img/png' %>
     <script src="https://js.stripe.com/v3/"></script>
     <!--bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/trix/1.0.0/trix.css">
 
     <!--onboard stripe api-->
-      <%= tag :meta, name: "stripe-public-key", content: Rails.configuration.stripe[:publishable_key] %>
+      <%= tag :meta, name: "stripe-public-key", content: "pk_test_YjJMMXfu76fLS1XnIUt99SXM" %>
   </head>
 
  <body class="bg-white">
