--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,11 +1,10 @@
-
 <div class="flex flex-wrap items-center mb-5 text-indigo-darker">
   <div class="flex-1 flex justify-between items-center">
     <div><h3 class="text-lg"><%= user.name %></h3> <%= user.username %> <% if current_user %>(You)<% end %></div>
     <p>Joined on <%= readable_time(user.created_at) %></p>
 
   </div>
-  <%= link_to 'Delete User', users_path, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-destroy ml-4" if admin? %>
+  <%= link_to 'Delete User', users_path, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-destroy bg-red text-white hover:bg-red-dark ml-4" if admin? %>
 </div>
 
 <% if user.meetings.any? %>
