--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container m-auto bg-white my-10 border border-grey-light p-6">
+<div class="container m-auto hover:rounded shadow hover:shadow-lg bg-white my-10 border border-grey-light p-6">
   <h1 class="text-indigo-darker pb-2 border-b border-grey-light mb-4">Users</h1>
   <%= render @users %>
 </div>
