#419 The Application is up and Running

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/trix/1.0.0/trix.css">
 
     <!--onboard stripe api-->
-      <%= tag :meta, name: "stripe-public-key", content: Rails.application.credentials.stripe_publishable_key="pk_test_YjJMMXfu76fLS1XnIUt99SXM" %>
+      <%= tag :meta, name: "stripe-public-key", content: "pk_test_YjJMMXfu76fLS1XnIUt99SXM" %>
   </head>
 
  <body class="bg-white">
