--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -3,5 +3,5 @@
 <%= render 'form', meeting: @meeting %>
 
 <%= link_to 'Show', @meeting %> |
-<%= link_to 'Delete', meeting_path , method: :delete, data: { confirm: 'Are you sure?' } %> | 
+<%= link_to 'Delete', meeting_path , method: :delete, data: { confirm: 'Are you sure?' } if current_user.admin? %> | 
 <%= link_to 'Back', meetings_path %>
